<resources>
    <string name="app_name">MetaBook ID</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">\"On a silent moonless night\, I don\'t feel lonely\! I have my best friends \- my books to keep me company.\"</string>
    <string name="title_welcome_page">Read A Book</string>
    <string name="title_welcome_page_1">Books Are Windows Of Knowledge</string>
    <string name="message_welcome_page_1">\"Books are a window to the world where we can see the world without traveling, just by reading a page.\"</string>
    <string name="title_welcome_page_2">Books On Your Smartphone</string>
    <string name="message_welcome_page_2">\" MetaBook-ID, a personal application to help you search for books with complete review features \" </string>
    <string name="title_welcome_page_3">Welcome to MetaBook ID</string>
    <string name="message_welcome_page_3">Get Started</string>
    <string name="title_signup_page">Complete This Field</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Please Login!</string>
    <string name="title_login_page">Welcome to MetaBook-ID</string>
    <string name="name">Name</string>
    <string name="logout">Log Out</string>
    <string name="input_email">Enter Your Email</string>
    <string name="invalid_email">Please, Check Your Email</string>
    <string name="name_required">Enter Your Name</string>
    <string name="input_password">Enter Your Password</string>
    <string name="password_length">Check Your Password</string>
    <string name="check_email">Please, Check Your Data</string>
    <string name="description">lorem ipsum</string>
    <string name="username">User Name</string>
    <string name="title_msg">Yeah..!</string>
    <string name="success_msg">You have successfully logged in. Can\'t wait to create your story?</string>
    <string name="next_msg">Start</string>
    <string name="error_msg">It seems, you can\'t log in. But Don\'t Worry You Can..</string>
    <string name="title_error_msg">Error!</string>
    <string name="create_account_msg">Create Account</string>
    <string name="repeat_msg">Repeat</string>
    <string name="signup_success_msg">The account with %1$s is ready. Let\'s start creating your story.</string>
    <string name="setting">Setting</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Search</string>
    <string name="title_notifications">Bookmark</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_books_cover_image">books cover image</string>
    <string name="txt_star_icon_content">Star icon content</string>
    <string name="what_is_your_gender">What is your gender?🚻</string>
    <string name="select_gender_for_better_content">Select gender for better content</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="content_tab_text">This is Tab %1$d</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 2</string>
    <string name="pages">Pages</string>
    <string name="empty_text">test\n</string>
    <string name="categories">Categories</string>
    <string name="publisher">Publisher</string>
    <string name="published_date">Publish Date</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Profile</string>
    <string name="menu_slideshow">About</string>
    <string name="titleDescBook">Description</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="confirm_input_password">Confirm Your Password</string>
    <string name="menu_About">About</string>
    <string name="Profile">Profile</string>
    <string name="settings">Setting</string>
    <string name="general">General</string>
    <string name="theme">Theme</string>
    <string name="languages">Language</string>
    <string name="about">About Apps</string>
    <string name="version">MetaBook-ID Version 1</string>
    <string name="description_image">desc</string>
    <string name="title_search">Search</string>
    <string name="title_favorite">Favorite</string>
    <string name="recommend_books">Recommend Books</string>
    <string name="buy">Buy</string>
    <string name="metabook"><![CDATA[MetaBook is a platform to get the best and most complete popular book reviews & spoilers based on a website\nTo get the optimal reading experience, it is highly recommended to read the whole book & buy the book directly.]]></string>
    <string name="created">Capstone Product Bangkit Batch 1 2024\nTeam C241-PS464</string>
    <string name="katalog">
        Judul Buku\t:\t The Joy of Less \n
        Pengarang\t:\t FrancineJay \n
        Penerbit\t:\t Anja Press \n
        Tahun Terbit\t:\t 2010 \n
        Ketebalan Buku\t:\t 286 \n
        halaman Harga Buku Terbaru\t:\t IDR 350,000\n
        Ukuran Buku\t:\t 15 x 23 cm\n
        ISBN\t:\t 978-0984087310\n
        Kategori atau Subjek\t:\t Pengembangan Diri, Minimalisme\n</string>
    <string name="katalog1">
        <b>PART ONE: PHILOSOPHY</b>\n
        See your stuff for what it is (14)\n
        You are not what you own (19)\n
        Less stuff, less stress (24)\n
        Less stuff, more freedom (29)\n
        Detach from your stuff (34)\n
        Be a good gatekeeper (39)\n
        Embrace space (43)\n
        Enjoy without owning (48)\n
        The joy of enough (53)\n
        Live simply (58)\n\n

        <b>PART TWO: STREAMLINE</b>\n
        Start over (64)\n
        Trash, treasure, or transfer (69)\n
        Reason for each item (75)\n
        Everything in its place (78)\n
        All surfaces clear (83)\n
        Modules (88)\n
        Limits (93)\n
        If one comes in, one goes out (102)\n
        Narrow down (106)\n
        Everyday maintenance (107)\n\n

        <b>PART THREE: ROOM BY ROOM</b>\n
        Living or family room (114)\n
        Bedroom (130)\n
        Wardrobe (144)\n
        Home office (159)\n
        Kitchen and dining room (175)\n
        Bathroom (191)\n
        Storage spaces (204)\n
        Gifts, heirlooms, and sentimental items (219)\n\n

        <b>PART FOUR: LIFESTYLE</b>\n
        The clutter-free family (236)\n
        The greater good (263)\n
        Conclusion (283)\n
        Acknowledgments (287)\n
\n</string>
    <string name="katalog2">

Struktur Buku: "The Joy of Less" dirancang dengan struktur yang memudahkan pembaca untuk mengikuti dan menerapkan prinsip-prinsip minimalisme dalam kehidupan sehari-hari. Buku ini dibagi menjadi empat bagian utama, yang masing-masing berfokus pada aspek berbeda dari proses decluttering dan adopsi gaya hidup minimalis:
Filsafat Minimalis: Bagian ini menjelaskan dasar-dasar filosofis di balik minimalisme. Francine Jay menggali sejarah minimalisme, berbagai alasan mengapa orang memilih gaya hidup ini, dan manfaat psikologis serta praktis dari memiliki lebih sedikit barang.\n
STREAMLINE Metode: Ini adalah kerangka kerja yang dikembangkan oleh Jay untuk membantu pembaca mengurangi kepemilikan mereka. STREAMLINE adalah akronim yang masing-masing hurufnya mewakili satu langkah dalam proses decluttering: Sort, Trash, Reason, Eliminate, Arrange, Maintain, Limit, If it comes back, dan Never return, Extend. Setiap langkah diuraikan dengan contoh dan strategi praktis.
Ruang di Rumah: Di sini, Jay menawarkan panduan langkah demi langkah untuk decluttering setiap ruangan di rumah, mulai dari dapur hingga kamar tidur, ruang tamu, dan bahkan ruang kerja. Tips khusus disediakan untuk mengatasi area yang biasanya penuh sesak, seperti lemari dan laci.\n
Gaya Hidup Minimalis: Bagian terakhir dari buku fokus pada cara-cara untuk mempertahankan minimalisme dalam jangka panjang. Pembahasan mencakup cara membuat kebiasaan yang bertahan, mengelola konsumsi, dan bahkan bagaimana mempengaruhi anggota keluarga lain untuk mengadopsi gaya hidup yang lebih sederhana.

    </string>
    <string name="title_katalog">KATALOG</string>
    <string name="title_daftar_isi">DAFTAR ISI</string>
    <string name="title_3">"Struktur dan Isi Lebih Detail: \"The Joy of Less\" oleh Francine Jay "</string>
    <string name="katalog3">
        Di sepanjang buku, Francine Jay menawarkan pandangan mendalam tentang bagaimana decluttering bukan hanya aktivitas fisik tetapi juga mental dan emosional.\n
        Setiap bab mengandung anekdot, studi kasus, dan contoh dari pengalaman nyata yang membantu pembaca memvisualisasikan manfaat praktis dari prinsip yang dibahas. Misalnya, dalam menjelaskan metode STREAMLINE, Jay tidak hanya memberi tahu pembaca bagaimana membuang barang, tetapi juga bagaimana setiap langkah ini dapat membebaskan ruang fisik dan mental, serta mengurangi kecemasan dan stres.\n
        Di bagian tentang ruang di rumah, Jay sangat detail dalam memberikan petunjuk dan motivasi. Misalnya, dalam mengatur dapur, dia mendorong pembaca untuk menyimpan hanya peralatan yang sering digunakan dan menjual atau menyumbangkan yang jarang dipakai.\n
        Strategi ini tidak hanya membantu mengurangi jumlah barang di rumah tetapi juga membuat kegiatan memasak lebih efisien dan menyenangkan.\n
        Seluruh buku diisi dengan tips yang dapat langsung diterapkan, membuat proses decluttering tampak kurang menakutkan dan lebih dapat dikelola.\n
        Pendekatan Jay yang praktis dan langsung memberikan pembaca rasa dapat mengontrol lingkungan mereka dan, sebagai hasilnya, kehidupan mereka.\n
        Secara keseluruhan, "The Joy of Less" menawarkan panduan yang komprehensif dan mendalam tentang minimalisme yang menggabungkan aspek teoritis dan praktis.\n
        Ini tidak hanya sebuah buku tentang mengurangi barang, tetapi tentang memperkaya hidup dengan mengurangi keterikatan pada benda material. \n
        \"The Joy of Less\" oleh Francine Jay \n

    </string>
    <string name="forum_discussions">Forum Discussions</string>
    <string name="title_4">Ikhtisar Isi</string>
    <string name="title_5">Latar Belakang Pengarang</string>
</resources>