<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.metabook.view.main.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.metabook.view.main.ui.search.SearchFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.metabook.view.main.ui.bookmark.BookmarkFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_bookmark" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.metabook.view.main.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.metabook.view.main.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.metabook.view.main.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>