<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_welcome_scene"
    tools:context=".view.main.ui.welcome.WelcomeActivity">

    <ImageView
        android:id="@+id/imageScreenView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/assets_logo1" />
    <ImageView
        android:id="@+id/logoMenu1"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:scaleType="fitXY"
        android:src="@drawable/welcome_assets_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/titleMenu1"
        style="@style/text_head"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:text="@string/title_welcome_page"
        app:layout_constraintEnd_toEndOf="@+id/logoMenu1"
        app:layout_constraintStart_toStartOf="@+id/logoMenu1"
        app:layout_constraintTop_toBottomOf="@+id/logoMenu1" />

    <TextView
        android:id="@+id/descMenu1"
        style="@style/myquotes"
        android:text="@string/message_welcome_page"
        android:textAlignment="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/titleMenu1"
        app:layout_constraintStart_toStartOf="@+id/titleMenu1"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu1" />

    <ImageView
        android:id="@+id/logoMenu2"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:src="@drawable/welcome_assets_4" />

    <TextView
        android:id="@+id/titleMenu2"
        style="@style/text_head"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/logoMenu2"
        app:layout_constraintStart_toStartOf="@+id/logoMenu2"
        app:layout_constraintTop_toBottomOf="@+id/logoMenu2"
        android:text="@string/title_welcome_page_1" />

    <TextView
        android:id="@+id/descMenu2"
        style="@style/myquotes"
        android:textAlignment="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/titleMenu2"
        app:layout_constraintStart_toStartOf="@+id/titleMenu2"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu2"
        android:text="@string/message_welcome_page_1" />

    <ImageView
        android:id="@+id/logoMenu3"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:src="@drawable/welcome_assets_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/titleMenu3"
        style="@style/text_head"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/logoMenu3"
        app:layout_constraintStart_toStartOf="@+id/logoMenu3"
        app:layout_constraintTop_toBottomOf="@+id/logoMenu3"
        android:text="@string/title_welcome_page_2" />

    <TextView
        android:id="@+id/descMenu3"
        style="@style/myquotes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/titleMenu3"
        app:layout_constraintStart_toStartOf="@+id/titleMenu3"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu3"
        android:text="@string/message_welcome_page_2" />

    <ImageView
        android:id="@+id/logoMenu4"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:src="@drawable/welcome_assets_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/titleMenu4"
        style="@style/text_head"
        android:textAlignment="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/logoMenu4"
        app:layout_constraintStart_toStartOf="@+id/logoMenu4"
        app:layout_constraintTop_toBottomOf="@+id/logoMenu4"
        android:text="@string/title_welcome_page_3" />

    <TextView
        android:id="@+id/descMenu4"
        style="@style/text_head"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/titleMenu4"
        app:layout_constraintStart_toStartOf="@+id/titleMenu4"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu4"
        android:text="@string/message_welcome_page_3" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintEnd_toStartOf="@+id/menu2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_circle_24"
        app:tint="@color/fourth_bg"
        tools:layout_editor_absoluteY="731dp" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintBottom_toBottomOf="@+id/menu1"
        app:layout_constraintEnd_toStartOf="@+id/menu3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/menu1"
        app:layout_constraintTop_toTopOf="@+id/menu1"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_circle_24"
        app:tint="@color/fourth_bg" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintBottom_toBottomOf="@+id/menu2"
        app:layout_constraintEnd_toStartOf="@+id/menu4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/menu2"
        app:layout_constraintTop_toTopOf="@+id/menu2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_circle_24"
        app:tint="@color/fourth_bg" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="32dp"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintBottom_toBottomOf="@+id/menu3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menu3"
        app:layout_constraintTop_toTopOf="@+id/menu3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_circle_24"
        app:tint="@color/fourth_bg" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        style="@style/mybutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:alpha="0"
        android:backgroundTint="@color/fourth_bg"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/menu2"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.331"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signupButton"
        style="@style/mybutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:alpha="0"
        android:backgroundTint="@color/fourth_bg"
        android:text="@string/signup"
        app:layout_constraintBottom_toTopOf="@+id/menu2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button" />

</androidx.constraintlayout.motion.widget.MotionLayout>