<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_secondary"
    android:orientation="vertical"
    tools:context=".view.main.ui.slideshow.SlideshowFragment">
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        app:shapeAppearanceOverlay="@style/circleImageViewStyle"
        android:src="@drawable/assets_logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/app_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/version"
        android:textColor="@color/black"
        android:textAlignment="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="About us"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/metabook"
                android:layout_margin="5dp"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/background_primary"
                android:textSize="18sp"
                android:textAlignment="center"></TextView>

            <TextView
                android:id="@+id/aboutCreditsLinksTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/created"
                android:textColor="@color/background_primary"
                android:fontFamily="@font/poppins"
                android:textAlignment="center"
                android:padding="8dp"
                android:layout_marginBottom="0dp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:src="@drawable/logo_bangkit"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>